--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="sec3-details1">
 
                 <h4>GET IN TOUCH</h4>
-                <h2>Contact Me!</h2>
+                <h2>Contact!</h2>
             </div>
 
             <div class="sec3-details2">
